[gd_scene load_steps=4 format=1]

[ext_resource path="res://Scripts/Boat.gd" type="Script" id=1]
[ext_resource path="res://Assets/Graphics/boat_0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 111.845, 112.656 )

[node name="Boat" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.663422, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0.663422, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 4.3757, 15.2168 )
transform/scale = Vector2( 2.32714, 2.32714 )
texture = ExtResource( 2 )

[connection signal="input_event" from="." to="." method="_on_Boat_input_event"]

[connection signal="mouse_enter" from="." to="." method="_on_Boat_mouse_enter"]

[connection signal="mouse_exit" from="." to="." method="_on_Boat_mouse_exit"]


